Fix scrollbars in markdown editor

--- a/evileg_core/static/css/evileg_core.css
+++ b/evileg_core/static/css/evileg_core.css
@@ -12007,7 +12007,7 @@ pre > pre {
 .markdown-fullscreen > .tab-content > .tab-pane > div {
   height: calc(100vh - 41px) !important; }
 
-.markdown-fullscreen > .tab-content > .tab-pane > div {
+.markdown-fullscreen > .tab-content > .tab-pane > .tab-preview {
   overflow-y: auto; }
 
 .drawer, .fixed-top .navbar, .expanded-menu {
